name: tesser
version: 0.0.1
build-type: Simple
cabal-version: >=1.18

executable tesser
    hs-source-dirs:     main
    main-is:            tesser.hs
    build-depends:      base >=4.6 && <5,
                        hakyll >= 4.4,
                        transformers
    default-language:   Haskell2010
